# Codex-mini

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src/main/: index.ts
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.vue
desktop/src/renderer/src/assets/: main.css
desktop/src/renderer/src/components/: ChatComposer.vue  MessageList.vue  PermissionDialog.vue  TitleBar.vue
desktop/src/renderer/src/services/: markdown.ts
desktop/src/renderer/src/stores/: chat.ts  runtime.ts
desktop/src/renderer/src/types/: runtimeEvents.ts
docs/: PRODUCTIZATION_ROADMAP.md  PROJECT_ARCHITECTURE_STATUS.md
sandbox/: macos_executor.py
server/: app.py
session/: __init__.py  models.py  recovery.py  store.py  transcript.py
tests/: test_macos_executor.py  test_server_events.py  test_session_recovery.py  test_session_store.py
tools/: registry.py  run_command.py  types.py
