[project]
name = "codex-mini"
version = "0.1.0"
description = "Codex 类本地 Agent runtime（Python 后端、工具安全策略、会话持久化）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "litellm>=1.67.0",
    "langgraph>=0.2.66",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
